--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <style>
     body {
         background-image: url(b.jpg);
-        font-family: cursive
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
     }
 </style>
 
